# zktsim

./: Cargo.toml  NOTICE  README.md
examples/: c6288.zkt  cla_adder_6b.v  cla_adder_6b.zkt
scripts/: v2zkt.sh  yjs2zkt.py
src/: lib.rs  main.rs
src/boolean_circuit/: mod.rs
src/circuit/: common.rs  expected_io_table.rs  gate_definition_table.rs  gate_io_table.rs  mimc7_cbc_cipher.rs  mod.rs  poseidon_bn256_fr.rs  wire_assignment_table.rs
src/gadgets/: mod.rs  utilities.rs
src/gadgets/poseidon/: mod.rs  pow5.rs
src/gadgets/poseidon/primitives/: fp.rs  fq.rs  fr.rs  grain.rs  mds.rs  mod.rs  p128pow5t3.rs  test_vectors.rs
