[package]
name = "zktsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/appliedzkp/halo2.git", features = ["cost-estimator"]}
halo2curves = "0.6.0"
serde_json = "1.0.111"
