[package]
name = "zktsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
ff = "0.13.0"
group = "0.13.0"
halo2_proofs = { git = "https://github.com/appliedzkp/halo2.git"}
halo2curves = "0.6.0"
pasta_curves = "0.5.1"
proptest = "1.4.0"
rand = "0.8.5"
rand_core = "0.6.4"
uint = "0.9.5"
